test/error/parser/enum-unexpected-token.dsk
enum Status
    Ok
    42
    Error
end
